@@ -9,60 +9,35 @@
  */
 package org.eclipse.hawkbit.repository;
 
-import java.util.Arrays;
+import lombok.Getter;
+
 import java.util.Collections;
 import java.util.List;
 
 /**
- * Describing the fields of the Rollout model which can be used in the REST API
- * e.g. for sorting etc.
- *
+ * Describing the fields of the Rollout model which can be used in the REST API e.g. for sorting etc.
  */
+@Getter
 public enum RolloutFields implements FieldNameProvider {
-    /**
-     * The name field.
-     */
-    NAME("name"),
-    /**
-     * The description field.
-     */
-    DESCRIPTION("description"),
-    /**
-     * The id field.
-     */
+
     ID("id"),
-    /**
-     * The status field.
-     */
+    NAME("name"),
+    DESCRIPTION("description"),
     STATUS("status"),
-    /**
-     * The Distribution set field.
-     */
     DISTRIBUTIONSET("distributionSet", DistributionSetFields.ID.getFieldName(),
             DistributionSetFields.NAME.getFieldName(), DistributionSetFields.VERSION.getFieldName(),
             DistributionSetFields.TYPE.getFieldName());
 
     private final String fieldName;
-
     private final List<String> subEntityAttributes;
 
-    private RolloutFields(final String fieldName) {
+    RolloutFields(final String fieldName) {
         this.fieldName = fieldName;
         this.subEntityAttributes = Collections.emptyList();
     }
 
-    private RolloutFields(final String fieldName, final String... subEntityAttributes) {
+    RolloutFields(final String fieldName, final String... subEntityAttributes) {
         this.fieldName = fieldName;
-        this.subEntityAttributes = Arrays.asList(subEntityAttributes);
-    }
-
-    @Override
-    public List<String> getSubEntityAttributes() {
-        return Collections.unmodifiableList(subEntityAttributes);
-    }
-
-    @Override
-    public String getFieldName() {
-        return fieldName;
+        this.subEntityAttributes = List.of(subEntityAttributes);
     }
 }
